# FastDeploy

./: CMakeLists.txt  FastDeploy.cmake.in
benchmark/Runtime/: CMakeLists.txt  compile.sh  infer.cc  infer_PM.cc  infer_fp16.cc  infer_fp16_PM.cc  paddleslim.cc  readme.md
cmake/: cann.cmake
examples/vision/classification/paddleclas/python/: infer.py
fastdeploy/: runtime.cc  runtime.h
fastdeploy/pybind/: runtime.cc
python/: setup.py
python/fastdeploy/: runtime.py
